--- a/src/main/resources/com/example/locofx/logScene.fxml
+++ b/src/main/resources/com/example/locofx/logScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -7,14 +8,18 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="319.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.locofx.logSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="244.0" prefWidth="319.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.locofx.logSceneController">
    <children>
-      <TextField layoutX="84.0" layoutY="27.0" promptText="Username" />
-      <PasswordField layoutX="83.0" layoutY="69.0" promptText="Password" />
-      <Button fx:id="logIN" layoutX="82.0" layoutY="109.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" text="LOGIN" />
-      <Button fx:id="regButton" layoutX="198.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleSignUpButtonAction" text="Register" />
+      <TextField fx:id="userField" layoutX="84.0" layoutY="27.0" promptText="Username" styleClass="tf_box" />
+      <PasswordField fx:id="passField" layoutX="83.0" layoutY="69.0" promptText="Password" styleClass="tf_box" />
+      <Button fx:id="logIN" layoutX="82.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="26.0" prefWidth="150.0" styleClass="trans-logIn-white-border" text="LOGIN" textFill="WHITE" />
+      <Button fx:id="regButton" layoutX="198.0" layoutY="193.0" mnemonicParsing="false" onAction="#handleSignUpButtonAction" text="Register">
+         <styleClass>
+            <String fx:value="button" />
+            <String fx:value="trans-logIn-white-border" />
+         </styleClass></Button>
       <Label layoutX="57.0" layoutY="197.0" text="Don't have an account?" />
       <Separator layoutX="45.0" layoutY="182.0" prefHeight="2.0" prefWidth="242.0" />
-      <Label fx:id="statLabel" alignment="CENTER" layoutX="119.0" layoutY="147.0" prefHeight="18.0" prefWidth="76.0" />
+      <Label fx:id="statLabel" alignment="CENTER" layoutY="147.0" prefHeight="18.0" prefWidth="319.0" />
    </children>
 </AnchorPane>
